support button color

--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,5 @@
-<ma-button>test</ma-button>
+<ma-button>Default</ma-button>
+<ma-button color="secondary">Secondary</ma-button>
+<ma-button color="success">Success</ma-button>
+<ma-button color="danger">Danger</ma-button>
+<ma-button color="warning">Warning</ma-button>
