add button size

--- a/src/demo/button.html
+++ b/src/demo/button.html
@@ -3,3 +3,7 @@
 <ma-button color="success">Success</ma-button>
 <ma-button color="danger">Danger</ma-button>
 <ma-button color="warning">Warning</ma-button>
+
+<ma-button size="l" disabled>Big button</ma-button>
+<ma-button size="m" disabled>Medium button</ma-button>
+<ma-button size="s" disabled>Small button</ma-button>
