add button disabled

--- a/src/demo/button.html
+++ b/src/demo/button.html
@@ -4,6 +4,8 @@
 <ma-button color="danger">Danger</ma-button>
 <ma-button color="warning">Warning</ma-button>
 
-<ma-button size="l" disabled>Big button</ma-button>
-<ma-button size="m" disabled>Medium button</ma-button>
-<ma-button size="s" disabled>Small button</ma-button>
+<ma-button size="l">Big button</ma-button>
+<ma-button size="m">Medium button</ma-button>
+<ma-button size="s">Small button</ma-button>
+
+<ma-button disabled>Disabled button</ma-button>
