update input demo

--- a/src/demo/input/input.html
+++ b/src/demo/input/input.html
@@ -1,2 +1,4 @@
 <ma-input></ma-input>
 <ma-input label="标题"></ma-input>
+<ma-input placeholder="请输入"></ma-input>
+<ma-input label="标题" placeholder="请输入"></ma-input>
