--- a/src/demo/select/select.html
+++ b/src/demo/select/select.html
@@ -1,5 +1,7 @@
-<ma-select>
-    <ma-select-item>Option 1</ma-select-item>
-    <ma-select-item>Option 2</ma-select-item>
-    <ma-select-item>Option 3</ma-select-item>
-</ma-select>
+<div class="default-container">
+    <ma-select>
+        <ma-select-item key="1">Option 1</ma-select-item>
+        <ma-select-item key="2">Option 2</ma-select-item>
+        <ma-select-item key="3">Option 3</ma-select-item>
+    </ma-select>
+</div>
