feat: add ma-icon component with customizable sizes, tones, and rotations
- Implemented ma-icon component with SCSS styles for theming and responsiveness.
- Added TypeScript logic for handling icon loading, error events, and accessibility.
- Created HTML template for the ma-icon component.
- Updated demo to include ma-icon examples with various configurations.
- Enhanced webpack configuration to support SVG imports for icon assets.
- Added type declarations for SVG files.

--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -38,6 +38,7 @@
         <h3>组件</h3>
         <ul class="nav-menu">
           <li><a href="#button" class="nav-link" data-component="button">🔘 Button 按钮</a></li>
+          <li><a href="#icon" class="nav-link" data-component="icon">🎭 Icon 图标</a></li>
           <li><a href="#layout" class="nav-link" data-component="layout">🏗️ Layout 布局</a></li>
         </ul>
       </nav>
